--- a/main_app/templates/instructors/instructor_dashboard.html
+++ b/main_app/templates/instructors/instructor_dashboard.html
@@ -133,7 +133,7 @@
   </style>
 
   <div class="dashboard">
-    <h1>Instructor Dashboard</h1>
+    {% comment %} <h1>Instructor Dashboard</h1> {% endcomment %}
 
     <h2>Quick Stats</h2>
     <div class="stats-grid">
